# ORION-

./: .env.example  .gitignore  .replit  AGENT_DEMO_GUIDE.md  AMELIORATIONS_IMPLEMENTEES.md  AMELIORATIONS_INTELLIGENCE_FIABILITE_2025-10-24.md  AMELIORATIONS_ORCHESTRATION.md  AMELIORATIONS_ORION_OCTOBRE_2025.md  AMELIORATIONS_QUALITE_CODE_OCT_2025.md  ANALYSE_COMPLETE_ORION.md  ANALYSE_COMPLETE_ORION_ULTIMATE.md  ANALYSE_ORION_DETAILLEE.md  AUDIT_ULTRA_COMPLET_ORION_2025.md  CHANGELOG.md  CHANGELOG_AMELIORATIONS.md  CHANGELOG_ETAPE5.md  CHANGELOG_OIE_ULTIMATE.md  CHANGELOG_OIE_ULTIMATE_2025-10-24.md  CHANGELOG_QUALITE.md  CHANGELOG_ULTIMATE_2025-10-23.md  CHANGELOG_V2.md  COMMENCEZ_ICI.md  COMPARAISON_FINALE_COMPLETE.md  CONTRIBUTING.md  CORRECTIONS_APPLIQUEES_2025-10-24.md  CORRECTION_ANY_COMPLETE_OCT_2025.md  DEMARRAGE_RAPIDE_UI.md  DEMO_RAPIDE.md  DEPLOYMENT_GUIDE.md  DESIGN_ORGANIQUE_GUIDE.md  DOCUMENTATION_INDEX.md  EXPLICATION_COMPLETE_VIRTUAL_AGENTS.md  FEATURES_OBSERVABILITE.md  FICHIERS_MODIFIES_REFONTE_UI.md  GUIDE_DESIGN_ORGANIQUE.md  GUIDE_INTEGRATION_OIE.md  GUIDE_RAPIDE_CONSOLIDATION.md  GUIDE_TESTS.md  IMPLEMENTATION_AMELIORATIONS_ORION.md  IMPLEMENTATION_COMPLETE.md  (+101 more)
.github/: dependabot.yml
docs/: AMELIORATIONS_DEBATE_GENIUS.md  AMELIORATIONS_DEBAT_IA.md  AMELIORATIONS_IMPLEMENTEES.md  ARCHITECTURE_FLOW.md  (+40 more)
model_foundry/: .gitignore  INSTALLATION.md  LANCE_BUILD.sh  Makefile  QUICK_START.md  README.md  START_BUILD.md  build_orion_models.sh  foundry.sh  merge_models.py  optimize_for_web.py  optimize_pipeline.py  pyproject.toml  quantize_model.py  requirements.txt  setup.py  shard_model.py
model_foundry/recipes/: creative-coder-v1.yml  data-analyst-v1.yml  dev-polyglot-v1.yml  orion-code-logic-v1.yml  orion-creative-multilingual-v1.yml  orion-vision-logic-v1.yml
(+295 files in other folders)
